# trainingJackson

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  datalist.txt
AAM/: CMakeLists.txt  Makefile  compiler
AAM/dlib_build/: Makefile
AAM/include/: openada.hpp
AAM/src/: aam.cpp  core_aam.cpp
dataset/: 100L.yaml  100R.yaml  101L.yaml  101R.yaml  102L.yaml  102R.yaml  103L.yaml  103R.yaml  104L.yaml  104R.yaml  105L.yaml  105R.yaml  106L.yaml  106R.yaml  107L.yaml  107R.yaml  108L.yaml  108R.yaml  109L.yaml  109R.yaml  10L.yaml  10R.yaml  110L.yaml  110R.yaml  111L.yaml  111R.yaml  112L.yaml  112R.yaml  113L.yaml  113R.yaml  114L.yaml  114R.yaml  115L.yaml  115R.yaml  116L.yaml  116R.yaml  117L.yaml  117R.yaml  118L.yaml  118R.yaml  (+231 more)
dlib_build/: Makefile  cmake_install.cmake
face2yaml/: CMakeLists.txt  Makefile  compiler
face2yaml/dataset/: 100L.yaml  100R.yaml  101L.yaml  101R.yaml  102L.yaml  102R.yaml  103L.yaml  103R.yaml  104L.yaml  104R.yaml  106L.yaml  106R.yaml  107L.yaml  107R.yaml  108L.yaml  108R.yaml  109L.yaml  109R.yaml  10R.yaml  110L.yaml  110R.yaml  111L.yaml  111R.yaml  112L.yaml  112R.yaml  113L.yaml  113R.yaml  114L.yaml  114R.yaml  116L.yaml  116R.yaml  117L.yaml  117R.yaml  118L.yaml  118R.yaml  119L.yaml  119R.yaml  11L.yaml  11R.yaml  120L.yaml  (+188 more)
face2yaml/dlib_build/: Makefile
face2yaml/src/: delaunay.cpp  delaunayMeanShape.cpp  face2yaml.cpp  meanShape.cpp  testMeanShape.cpp
src/: app.cpp
